Add cross compile builds for various architectures
Signed-off-by: Chaitanya Munukutla <chaitanya.m61292@gmail.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,5 +25,23 @@ jobs:
       run: |
         go mod tidy
 
-    - name: Build AMD64
-      run: go build -ldflags="-s -w" -o hermes_amd64 github.com/c16a/hermes/app
+    - name: Build Linux x64
+      run: GOOS=linux GOARCH=amd64 go build -ldflags="-s -w" -o hermes_linux_amd64 github.com/c16a/hermes/app
+
+    - name: Build Linux ARM 64-bit
+      run: GOOS=linux GOARCH=arm64 go build -ldflags="-s -w" -o hermes_linux_arm64 github.com/c16a/hermes/app
+
+    - name: Build Linux OpenPOWER 64-bit
+      run: GOOS=linux GOARCH=ppc64le go build -ldflags="-s -w" -o hermes_linux_ppc64le github.com/c16a/hermes/app
+
+    - name: Build Linux RISC-V 64-bit
+      run: GOOS=linux GOARCH=riscv64 go build -ldflags="-s -w" -o hermes_linux_riscv64 github.com/c16a/hermes/app
+
+    - name: Build Windows x64
+      run: GOOS=windows GOARCH=amd64 go build -ldflags="-s -w" -o hermes_windows_amd64.exe github.com/c16a/hermes/app
+
+    - name: Build macOS Intel x64
+      run: GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w" -o hermes_mac_amd64 github.com/c16a/hermes/app
+
+    - name: Build AIX 64-bit
+      run: GOOS=aix GOARCH=ppc64le go build -ldflags="-s -w" -o hermes_aix_ppc64 github.com/c16a/hermes/app
