--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Store Linux x64 artifacts
         uses: actions/upload-artifact@v2
         with:
+          name: hermes_linux_amd64
           path: build/hermes_linux_amd64
 
       - name: Build Linux ARM 64-bit
@@ -39,6 +40,7 @@ jobs:
       - name: Store Linux ARM 64-bit artifacts
         uses: actions/upload-artifact@v2
         with:
+          name: hermes_linux_arm64
           path: build/hermes_linux_arm64
 
       - name: Build Linux OpenPOWER 64-bit
@@ -47,7 +49,8 @@ jobs:
       - name: Store Linux OpenPOWER 64-bit artifacts
         uses: actions/upload-artifact@v2
         with:
-          path: hermes_linux_ppc64le
+          name: hermes_linux_ppc64le
+          path: build/hermes_linux_ppc64le
 
       - name: Build Linux RISC-V 64-bit
         run: GOOS=linux GOARCH=riscv64 go build -ldflags="-s -w" -o build/hermes_linux_riscv64 github.com/c16a/hermes/app
@@ -55,6 +58,7 @@ jobs:
       - name: Store Linux RISC-V 64-bit artifacts
         uses: actions/upload-artifact@v2
         with:
+          name: hermes_linux_riscv64
           path: build/hermes_linux_riscv64
 
       - name: Build Windows x64
@@ -63,6 +67,7 @@ jobs:
       - name: Store Windows x64 artifacts
         uses: actions/upload-artifact@v2
         with:
+          name: hermes_windows_amd64.exe
           path: build/hermes_windows_amd64.exe
 
       - name: Build macOS Intel x64
@@ -71,6 +76,7 @@ jobs:
       - name: Store macOS Intel x64 artifacts
         uses: actions/upload-artifact@v2
         with:
+          name: hermes_mac_amd64
           path: build/hermes_mac_amd64
 
       - name: Build AIX 64-bit
@@ -79,5 +85,6 @@ jobs:
       - name: Store AIX 64-bit artifacts
         uses: actions/upload-artifact@v2
         with:
+          name: hermes_aix_ppc64
           path: build/hermes_aix_ppc64
 
