--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -52,14 +52,14 @@ jobs:
           name: hermes_linux_ppc64le
           path: build/hermes_linux_ppc64le
 
-      - name: Build Linux RISC-V 64-bit
-        run: GOOS=linux GOARCH=riscv64 go build -ldflags="-s -w" -o build/hermes_linux_riscv64 github.com/c16a/hermes/app
-
-      - name: Store Linux RISC-V 64-bit artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: hermes_linux_riscv64
-          path: build/hermes_linux_riscv64
+#      - name: Build Linux RISC-V 64-bit
+#        run: GOOS=linux GOARCH=riscv64 go build -ldflags="-s -w" -o build/hermes_linux_riscv64 github.com/c16a/hermes/app
+#
+#      - name: Store Linux RISC-V 64-bit artifacts
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: hermes_linux_riscv64
+#          path: build/hermes_linux_riscv64
 
       - name: Build Windows x64
         run: GOOS=windows GOARCH=amd64 go build -ldflags="-s -w" -o build/hermes_windows_amd64.exe github.com/c16a/hermes/app
