Disable AIX PowerPC builds
Surprise surprise. BadgeDB doesn't support AIX-PPC.

Signed-off-by: Chaitanya Munukutla <chaitanya.m61292@gmail.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -78,13 +78,13 @@ jobs:
         with:
           name: hermes_mac_amd64
           path: build/hermes_mac_amd64
-
-      - name: Build AIX 64-bit
-        run: GOOS=aix GOARCH=ppc64 go build -ldflags="-s -w" -o build/hermes_aix_ppc64 github.com/c16a/hermes/app
-
-      - name: Store AIX 64-bit artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: hermes_aix_ppc64
-          path: build/hermes_aix_ppc64
+#
+#      - name: Build AIX 64-bit
+#        run: GOOS=aix GOARCH=ppc64 go build -ldflags="-s -w" -o build/hermes_aix_ppc64 github.com/c16a/hermes/app
+#
+#      - name: Store AIX 64-bit artifacts
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: hermes_aix_ppc64
+#          path: build/hermes_aix_ppc64
 
