Adjust CI pipeline
* All Linux builds now run on Ubuntu 20.04
* Remove Windows and macOS for test job

Signed-off-by: Chaitanya Munukutla <chaitanya.m61292@gmail.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-20.04, windows-latest, macOS-11.0 ]
+        os: [ ubuntu-20.04 ]
 
     steps:
       - name: Set up Go 1.x
@@ -29,7 +29,10 @@ jobs:
 
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ ubuntu-20.04 ]
     steps:
 
       - name: Set up Go 1.x
