Add Docker package upload
Signed-off-by: Chaitanya Munukutla <chaitanya.m61292@gmail.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,6 +30,8 @@ jobs:
   build:
     name: Build
     runs-on: ${{ matrix.os }}
+    needs:
+      - test
     strategy:
       matrix:
         os: [ ubuntu-20.04 ]
