Fix env var issue for GITHUB_TOKEN
Signed-off-by: Chaitanya Munukutla <chaitanya.m61292@gmail.com>

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,10 +15,10 @@ jobs:
     steps:
       - name: Multi-stage build
         run: docker build -t docker.pkg.github.com/c16a/hermes/hermes:latest .
-        with:
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push
         run: docker push docker.pkg.github.com/c16a/hermes/hermes:latest
-        with:
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
