Change docker image name to root level
Signed-off-by: Chaitanya Munukutla <chaitanya.m61292@gmail.com>

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,11 +14,11 @@ jobs:
 
     steps:
       - name: Multi-stage build
-        run: docker build -t docker.pkg.github.com/c16a/hermes/hermes:latest -f Dockerfile .
+        run: docker build -t docker.pkg.github.com/c16a/hermes:latest -f Dockerfile .
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push
-        run: docker push docker.pkg.github.com/c16a/hermes/hermes:latest
+        run: docker push docker.pkg.github.com/c16a/hermes:latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
