--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -23,7 +23,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: docker.pkg.github.com
-          username: ${{ github.repository_owner }}
+          username: $GITHUB_ACTOR
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
@@ -32,6 +32,8 @@ jobs:
           context: .
           file: ./Dockerfile
           platforms: linux/amd64
+          username: $GITHUB_ACTOR
+          password: ${{ secrets.GITHUB_TOKEN }}
           push: true
           tags: |
             docker.pkg.github.com/c16a/hermes/hermes:latest
