--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,9 +22,9 @@ jobs:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
-          registry: docker.pkg.github.com
+          registry: ghcr.io
           username: $GITHUB_ACTOR
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.CR_PAT }}
 
       - name: Build and push
         uses: docker/build-push-action@v2
@@ -33,7 +33,7 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64
           username: $GITHUB_ACTOR
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.CR_PAT }}
           push: true
           tags: |
-            docker.pkg.github.com/c16a/hermes/hermes:latest
+            ghcr.io/c16a/hermes/hermes:latest
